--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "css-loader": "^0.28.11",
     "docz": "^0.2.2",
     "prop-types": "^15.6.1",
+    "redux-mock-store": "^1.5.1",
     "style-loader": "^0.21.0"
   }
 }
